<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings" >

    <PreferenceCategory
        android:key="pref_key_login_settings"
        android:title="@string/pref_service_login_title" >
        <Preference
            android:key="tumblr_login"
            android:persistent="false"
            android:title="@string/login_title" />
        <Preference
            android:key="dropbox_login"
            android:persistent="false"
            android:title="@string/login_title" />
        </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_import_export_key"
        android:title="@string/pref_import_category_title" >
        <PreferenceScreen
            android:key="import_category_key"
            android:persistent="false"
            android:title="@string/pref_import_screen_title" >
            <CheckBoxPreference android:key="automatic_export"
                                android:title="@string/automatic_export"/>
            <Preference
                android:key="import_dom_filters"
                android:persistent="false"
                android:title="@string/import_dom_filters_title" />

            <PreferenceCategory android:title="@string/pref_posts_title" >
                <Preference
                    android:key="import_posts_from_csv"
                    android:persistent="false"
                    android:title="@string/import_posts_from_csv_title" />
                <Preference
                    android:key="export_posts_csv"
                    android:persistent="false"
                    android:title="@string/export_posts_csv_title" />
                <Preference
                    android:key="import_posts_from_tumblr"
                    android:persistent="false"
                    android:title="@string/import_posts_from_tumblr_title" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/pref_birthdays_title" >
                <Preference
                    android:key="import_birthdays"
                    android:persistent="false"
                    android:title="@string/import_birthdays_title" />
                <Preference
                    android:key="import_birthdays_from_wikipedia"
                    android:persistent="false"
                    android:title="@string/import_missing_birthdays_from_wikipedia_title" />
                <Preference
                    android:key="export_birthdays"
                    android:persistent="false"
                    android:title="@string/export_birthdays_title" />
                <Preference
                    android:key="export_missing_birthdays"
                    android:persistent="false"
                    android:title="@string/export_missing_birthdays_title" />
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_schedule_settings"
        android:title="@string/pref_schedule_title" >
        <com.ternaryop.preference.IntegerEditTextPreference
            android:defaultValue="@integer/schedule_time_span_default"
            android:key="schedule_time_span"
            android:maxLength="2"
            android:title="Default Schedule Span Hours" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_clear_cache"
        android:title="@string/pref_clear_cache" >
        <Preference
            android:key="clear_image_cache"
            android:persistent="false"
            android:title="@string/clear_image_cache_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_developer"
        android:title="@string/pref_developer" >
        <Preference
            android:key="version"
            android:persistent="false" />
    </PreferenceCategory>
    
</PreferenceScreen>