<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/post_schedule"
        android:showAsAction="ifRoom"
        android:title="@string/schedule_post">
    </item>
    <item
        android:id="@+id/post_publish"
        android:showAsAction="never"
        android:title="@string/publish_post">
    </item>
    <item
        android:id="@+id/group_menu_image_dimension"
        android:showAsAction="never"
        android:title="@string/menu_show_image">
        <menu />
    </item>
    <item
        android:id="@+id/post_edit"
        android:showAsAction="never"
        android:title="@string/edit_post_title">
    </item>
    <item
        android:id="@+id/post_delete"
        android:showAsAction="never"
        android:title="@string/delete_post">
    </item>

</menu>